# heap-espaconave

./: CMakeLists.txt  Makefile  README.md  espacoNave.cpp  espacoNave.h  heap.cpp  heap.h  main.cpp  passageiro.cpp  passageiro.h  recurso.cpp  recurso.h
